--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
+title: Random Thoughts on Rust, Python, & Radare2
 email: commiebstrd@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  #rustlang #python
+  #rustlang #python #debugging #radare2 #assembly
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://commiebstrd.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 avatar: https://avatars3.githubusercontent.com/u/4625186
@@ -25,11 +25,22 @@ github_username:  commiebstrd
 
 # Build settings
 markdown: kramdown
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    css_class: 'highlight'
+
 theme: jekyll-theme-midnight
 plugins:
   - jekyll-feed
   - rouge
   - jekyll-sitemap
+  - jekyll-theme-midnight
+
+footer-links:
+  github: commiebstrd
+  twitter: c0mmiebstrd
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
